src/common/Components/PhotoPicker/Components/GalleryWithClassification/styles.scss
.gallery-modal ion-content .swiper .footer {
  .re-identify-button {
    --padding-start: 0;
    --padding-end: 0;
    background: var(--ion-color-primary);
    border-radius: 5px;
    font-size: 1em;
    color: #fff;
    padding: 0px 15px;
  }
}

#img-array {
  .warning-icon {
    position: absolute;
    right: 2px;
    bottom: 2px;
    background: #fff1f1d9;
    color: var(--ion-color-warning);
    border-radius: 100%;
    font-size: 1.1em;
    padding: 0px;
  }

  .success-icon {
    position: absolute;
    right: 2px;
    bottom: 2px;
    background: #f1fff4d9;
    color: var(--ion-color-success);
    border-radius: 100%;
    font-size: 1.1em;
    padding: 0px;
  }

  ion-spinner {
    position: absolute;
    right: 2px;
    bottom: 2px;
    background: #ffffff94;
    border-radius: 50%;
    height: 1.1em;
    width: 1.1em;
  }
}

.gallery-ai-message {
  font-weight: 400;
  font-size: 0.8em;

  b {
    color: var(--ion-color-warning);
    font-size: 0.9em;
  }
}

.gallery-ai-message.success b {
  color: #0ae57e;
}

.gallery-ai-message .light {
  color: var(--ion-color-light);
}

.gallery-ai-message.success .light {
  color: var(--ion-color-light);
}

.gallery-modal ion-content .swiper .footer-container {
  width: 100%;
  position: fixed;
  bottom: 0;
  background: #1313137c !important;
  height: 25% !important;

  h3 {
    font-size: 0.9em;
    font-weight: 600;
    color: #fff;
    text-align: left;
    margin: 5px 0 0 5px;
  }

  .species-array-wrapper {
    margin: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    display: flex;

    .species-array {
      width: 100%;
      overflow: auto;
      display: flex;
      flex: 1;
      height: 70%;

      .species-tile {
        padding: 10px 8px 0px 0;
        display: flex;
        justify-content: center;
        position: relative;
        max-width: 90%;
        border-radius: 10px;
        overflow: hidden;
        min-width: 31%;

        &:first-of-type {
          margin-left: 10px;
        }

        &:last-of-type {
          margin-right: 10px;
        }

        .score {
          width: 2em;
          height: 2em;
          background: #fff;
          position: absolute;
          z-index: 99;
          border-radius: 50%;
          top: 1px;
          right: 1px;
          display: flex;
          justify-content: center;
          align-items: center;
        }

        .success {
          color: var(--ion-color-primary);
          border: 2px solid var(--ion-color-primary);
        }

        .warning {
          color: var(--ion-color-warning);
          border: 2px solid var(--ion-color-warning);
        }

        .danger {
          color: var(--ion-color-danger);
          border: 2px solid var(--ion-color-danger);
        }

        ion-label {
          font-size: 0.6em;
          font-weight: 600;
        }

        .container {
          position: relative;
          background: white;
          display: flex;
          flex-direction: column;
          border-radius: 10px;
          width: 100%;
          align-items: center;

          ion-icon {
            // TODO: remove once real pics are available
            width: 100%;
            height: 100%;
            --ionicon-stroke-width: 5px;
            z-index: 1;

            svg path {
              fill: white !important;
            }
          }

          ion-label {
            padding: 0 2px;
            flex: 1;
            text-align: center;
            font-family: 'Museo700';
            z-index: 10;
            color: #121414;
            font-size: 0.7em;
            font-weight: 500;
            max-width: 95%;
            display: flex;
            flex-wrap: wrap;
            justify-content: center;
            align-items: center;
            overflow: hidden;
          }

          overflow: hidden;

          .species-thumbnail {
            z-index: 10;
            padding: -20px 0 0 0;
            margin-top: -5px;
            margin: -5px -3% -10%;
            max-height: 90%;
          }
          img.species-thumbnail-background {
            position: absolute;
            height: 100%;
            width: 100%;
            top: 0;
          }
          div.species-thumbnail-background {
            position: absolute;
            top: 0;
            width: 100%;
            height: 40%;

            img {
              position: absolute;
              filter: blur(30px);
              transform: scale(2.5);
              height: 100%;
              width: 100%;
            }
          }

          .info-box {
            position: absolute;
            right: 0;
            top: 0;
            height: 100%;
            width: 100%;
            background: #fffffff0;
            border-radius: 50%;
            transform: translate(50%, -50%);
            box-shadow: 0 0 15px 5px #e6e6e6;
            z-index: 100;

            ion-icon {
              width: 30%;
              height: 50%;
              --ionicon-stroke-width: 20;
              position: absolute;
              bottom: 4%;
              left: 16%;
            }
          }
        }
      }
      .species-tile.tablet {
        min-width: 20%;
      }

      .img-placeholder {
        background: #262626e3;
        border-radius: 11px;
        overflow: hidden;
        width: 100%;
        position: relative;
        display: flex;
        align-self: stretch;
        margin: 10px 5px 0px 5px;
      }
    }
  }
}

.gallery-tablet-styles {
  position: fixed;
  padding: 20px 60px;
  text-align: center;
  background: #131313;
  top: 0;
  left: 0;
  width: 100%;
}

.better-image-tip {
  display: block;
  color: white;
  font-size: 0.9em;
  margin-top: 10px;
}

